--- a/src/app/chameleon-reports/dynamic-tables/dynamic-tables.component.html
+++ b/src/app/chameleon-reports/dynamic-tables/dynamic-tables.component.html
@@ -1,7 +1,5 @@
-<link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/icon?family=Material+Icons"
-/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
 <div class="body">
   <div class="top-right-container">
     <button mat-icon-button (click)="goToHome()" matTooltip="Go to Home">
@@ -21,167 +19,71 @@
           <div dir="rtl" class="card">
             <div dir="rtl" class="card-body">
               <ng-container *ngFor="let column of columns; let i = index">
-                <!-- Check if the index is a multiple of 4 to start a new row -->
                 <div class="filter-row" *ngIf="i % 4 === 0">
-                  <!-- Filter fields go here -->
-                </div>
-
-                <mat-form-field
-                  class="filter-field"
-                  *ngIf="column == 'departName'"
-                >
-                  <mat-label class="filters">{{
-                    getColumnLabel(column)
-                  }}</mat-label>
-                  <input
-                    type="text"
-                    matInput
-                    [formControl]="getFormControl(column)"
-                    [matAutocomplete]="auto"
-                  />
-
-                  <mat-autocomplete #auto="matAutocomplete">
-                    <mat-option
-                      *ngFor="let option of filteredResponsibilities | async"
-                      [value]="option"
-                    >
-                      {{ option }}
-                    </mat-option>
-                  </mat-autocomplete>
-                </mat-form-field>
-                <mat-form-field
-                  *ngIf="column !== 'departName'"
-                  class="filter-field"
-                >
-                  <mat-label class="filters">{{
-                    getColumnLabel(column)
-                  }}</mat-label>
-                  <div
-                    *ngIf="column !== 'insert_time' && column !== 'update_time'"
-                  >
-                    <input
-                      matInput
-                      [formControl]="getFormControl(column)"
-                      class="filter-input"
-                    />
-
-                    <div class="name-select-wrapper">
-                      <mat-select
-                        *ngIf="column === 'ssP_DESCRIPTION'"
-                        [formControl]="getFormControl(column)"
-                        class="name-select"
-                      >
-                        <mat-option
-                          *ngFor="let option of answerTextOptions"
-                          [value]="option"
-                        >
-                          {{ option }}
-                        </mat-option>
-                      </mat-select>
+                  <mat-form-field class="filter-field" *ngIf="column == 'departName'">
+                    <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
+                    <input type="text" matInput [formControl]="getFormControl(column)" [matAutocomplete]="auto" />
+                    <mat-autocomplete #auto="matAutocomplete">
+                      <mat-option *ngFor="let option of filteredResponsibilities | async" [value]="option">
+                        {{ option }}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+                  <mat-form-field *ngIf="column !== 'departName'" class="filter-field">
+                    <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
+                    <div *ngIf="column !== 'insert_time' && column !== 'update_time'">
+                      <input matInput [formControl]="getFormControl(column)" class="filter-input" />
+                      <div class="name-select-wrapper">
+                        <mat-select *ngIf="column === 'ssP_DESCRIPTION'" [formControl]="getFormControl(column)" class="name-select">
+                          <mat-option *ngFor="let option of answerTextOptions" [value]="option">
+                            {{ option }}
+                          </mat-option>
+                        </mat-select>
+                      </div>
                     </div>
-                  </div>
-
-                  <div
-                    *ngIf="column == 'insert_time' || column == 'update_time'"
-                    #datepicker
-                    class="datepicker-field"
-                  >
-                    <input
-                      matInput
-                      [formControl]="getFormControl(column)"
-                      [matDatepicker]="picker"
-                      dir="rtl"
-                    />
-                    <mat-datepicker-toggle
-                      matSuffix
-                      [for]="picker"
-                    ></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                  </div>
-                </mat-form-field>
+                    <div *ngIf="column == 'insert_time' || column == 'update_time'" #datepicker class="datepicker-field">
+                      <input matInput [formControl]="getFormControl(column)" [matDatepicker]="picker" dir="rtl" />
+                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
+                    </div>
+                  </mat-form-field>
+                </div>
               </ng-container>
             </div>
             <div class="reset-button-container">
-              <button
-                mat-button
-                (click)="resetFilters()"
-                mat-raised-button
-                color="primary"
-                class="custom-button"
-                matTooltip="Reset Filters"
-              >
+              <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="Reset Filters">
                 <i class="material-icons">refresh</i>
-                <!-- Icon for reset -->
               </button>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div
-      dir="rtl"
-      style="display: flex; justify-content: space-between; align-items: center"
-    >
-      <mat-form-field
-        class="long-search-bar"
-        style="flex: 1; padding-right: 10px"
-      >
-        <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
-        <input
-          matInput
-          [formControlName]="'globalFilter'"
-          class="search-input"
-        />
+    <div dir="rtl" class="form-footer">
+      <mat-form-field class="long-search-bar">
+        <mat-label class="filters" style="color: blue">חיפוש</mat-label>
+        <input matInput [formControlName]="'globalFilter'" class="search-input" />
       </mat-form-field>
       <div class="graph-button-container">
-        <img
-          (click)="navigateToGraphPage()"
-          matTooltip="Move To Graph"
-          src="../../../../assets/graphIcon.png"
-          width="50px"
-        />
+        <img (click)="navigateToGraphPage()" matTooltip="Move To Graph" src="../../../../assets/graphIcon.png" width="50px" />
       </div>
       <div class="icon" matTooltip="Download Excel">
-        <img
-          src="../../assets/excel.png"
-          alt="Download"
-          (click)="exportToExcel()"
-          class="download-icon"
-          width="50px"
-        />
+        <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
       </div>
     </div>
   </form>
+
   <app-sys-graph *ngIf="showGraph" [graphData]="graphData"></app-sys-graph>
 
-  <mat-table
-    *ngIf="!showGraph"
-    [dataSource]="matTableDataSource"
-    matSort
-    dir="rtl"
-    class="mat-elevation-z8"
-  >
-    <!-- Loop through columns to define each column in the table -->
+  <mat-table *ngIf="!showGraph" [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
     <ng-container *ngFor="let column of columns" [matColumnDef]="column">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ getColumnLabel(column) }}
-        <!-- Use the function to get display-friendly labels -->
-      </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ getColumnLabel(column) }}</mat-header-cell>
       <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
     </ng-container>
 
-    <!-- Define the header row -->
     <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-    <!-- Define the data row -->
     <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
   </mat-table>
 
-  <!-- Define the paginator with page size options -->
-  <mat-paginator
-    [length]="matTableDataSource.paginator?.length || 0"
-    [pageIndex]="matTableDataSource.paginator?.pageIndex"
-    [pageSize]="matTableDataSource.paginator?.pageSize"
-    [pageSizeOptions]="[15, 50, 100]"
-  ></mat-paginator>
+  <mat-paginator [length]="matTableDataSource.paginator?.length || 0" [pageIndex]="matTableDataSource.paginator?.pageIndex" [pageSize]="matTableDataSource.paginator?.pageSize" [pageSizeOptions]="[15, 50, 100]"></mat-paginator>
 </div>
-
