--- a/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
+++ b/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
 <div class="body">
   <div class="top-right-container">
     <button mat-icon-button (click)="goToHome()" matTooltip="Go to Home">
@@ -11,80 +12,110 @@
     </h1>
   </div>
 
-  <form [formGroup]="filterForm" dir="rtl" class="filter-form">
-    <div class="container-fluid mb-2">
-      <div class="row search-count">
-        <div class="col">
-          <div dir="rtl" class="card">
-            <div dir="rtl" class="card-body">
-              <mat-form-field class="filter-field">
-                <mat-label class="filters">Drug</mat-label>
-                <input matInput [formControl]="getFormControl('drug')" class="filter-input" />
-              </mat-form-field>
-              <mat-form-field class="filter-field">
-                <mat-label class="filters">Start Date</mat-label>
-                <input matInput [formControl]="getFormControl('startDate')" [matDatepicker]="startPicker" class="filter-input" />
-                <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
-                <mat-datepicker #startPicker></mat-datepicker>
-              </mat-form-field>
-              <mat-form-field class="filter-field">
-                <mat-label class="filters">End Date</mat-label>
-                <input matInput [formControl]="getFormControl('endDate')" [matDatepicker]="endPicker" class="filter-input" />
-                <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-                <mat-datepicker #endPicker></mat-datepicker>
-              </mat-form-field>
-              <div class="search-button-container">
-                <button mat-button (click)="search()" mat-raised-button color="primary" class="custom-button" matTooltip="Search">
-                  <i class="material-icons">search</i>
-                </button>
+  <div class="filter-card">
+    <form [formGroup]="filterForm" dir="rtl" class="filter-form">
+      <div class="container-fluid mb-2">
+        <div class="row search-count">
+          <div class="col">
+            <div dir="rtl" class="card">
+              <div dir="rtl" class="card-body">
+                <div class="filter-container">
+                  <mat-form-field class="filter-field">
+                    <mat-label>קוד התרופה</mat-label>
+                    <input matInput [formControlName]="'drug'" />
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם התרופה</mat-label>
+                    <input type="text" matInput [formControl]="getFormControl('basic_Name')" [matAutocomplete]="auto" />
+                    <mat-autocomplete #auto="matAutocomplete">
+                      <mat-option *ngFor="let option of filteredBasicNameOptions | async" [value]="option">
+                        {{ option }}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם קטגוריה</mat-label>
+                    <input matInput [formControlName]="'category_Name'" />
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם יחידת ביצוע</mat-label>
+                    <input matInput [formControlName]="'execution_UnitName'" />
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>מספר כניסה</mat-label>
+                    <input matInput [formControlName]="'admission_No'" />
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>שם גנרי</mat-label>
+                    <input matInput [formControlName]="'generic_Name_ForDisplay'" />
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>תאריך התחלה</mat-label>
+                    <input matInput [formControlName]="'startDate'" [matDatepicker]="startDatePicker" />
+                    <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #startDatePicker></mat-datepicker>
+                  </mat-form-field>
+                  <mat-form-field class="filter-field">
+                    <mat-label>תאריך סיום</mat-label>
+                    <input matInput [formControlName]="'endDate'" [matDatepicker]="endDatePicker" />
+                    <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #endDatePicker></mat-datepicker>
+                  </mat-form-field>
+                </div>
               </div>
-            </div>
-            <div class="reset-button-container">
-              <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="Reset Filters">
-                <i class="material-icons">refresh</i>
-              </button>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div dir="rtl" style="display: flex; justify-content: space-between; align-items: center">
-      <mat-form-field class="long-search-bar" style="flex: 1; padding-right: 10px">
-        <mat-label class="filters" style="color: blue">חיפוש</mat-label>
-        <input matInput [formControlName]="'globalFilter'" class="search-input" />
-      </mat-form-field>
-      <div class="graph-button-container">
-        <img (click)="navigateToGraphPage()" matTooltip="Move To Graph" src="../../../../assets/graphIcon.png" width="50px" />
-      </div>
-      <div class="icon" matTooltip="Download Excel">
-        <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
-      </div>
-    </div>
-  </form>
-
-  <div *ngIf="loading" class="loading-container">
-    <mat-spinner></mat-spinner>
-    <div class="loading-text">מושך נתונים.... אנא המתן.</div>
+    </form>
   </div>
+  <div class="button-card">
+    <div class="button-container">
+        <button mat-button (click)="search()" mat-raised-button color="primary" class="custom-button" matTooltip="חפש">
+            <mat-icon>search</mat-icon>
+        </button>
+        <div class="icon" matTooltip="Download Excel">
+            <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" />
+        </div>
+    </div>
+    <div class="button-container">
+        <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="איפוס מסננים">
+            <i class="material-icons">refresh</i>
+        </button>
+    </div>
+</div>
 
-  <div *ngIf="!loading && showSuccessMessage" class="success-message">
-    הדוח נטען בהצלחה
-    <br>תודה למשה המלך
-  </div>
-
-  <mat-table *ngIf="!loading && !showGraph" [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
-    <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> {{ getColumnLabel(column) }} </mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        <ng-container [ngSwitch]="column">
-          <span *ngSwitchCase="'execution_Date'">{{ element[column] | date: 'dd-MM-yyyy HH:mm' }}</span>
-          <span *ngSwitchDefault>{{ element[column] }}</span>
-        </ng-container>
-      </mat-cell>
+  <mat-table *ngIf="!showGraph" [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
+    <ng-container matColumnDef="basic_Name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם בסיסי</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.basic_Name }} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="drug">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>קוד התרופה</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.drug }} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="execution_Date">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך ביצוע</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.execution_Date | date: 'dd-MM-yyyy' }} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="category_Name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם קטגוריה</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.category_Name }} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="execution_UnitName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם יחידת ביצוע</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.execution_UnitName }} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="admission_No">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>מספר כניסה</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.admission_No }} </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="generic_Name_ForDisplay">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>שם גנרי</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.generic_Name_ForDisplay }} </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns" class="mat-row"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
-
-  <mat-paginator [length]="totalResults" [pageIndex]="paginator?.pageIndex || 0" [pageSize]="paginator?.pageSize || 15" [pageSizeOptions]="[15, 50, 100]"></mat-paginator>
+  <mat-paginator [length]="totalResults" [pageSize]="10" [pageSizeOptions]="[10, 25, 50]"></mat-paginator>
 </div>
